loadbalancing-controller/example/example_ingress2.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: test-ingress2
spec:
  rules:
  - host: cluster1.lb.org.kchtest.org
    http:
      paths:
      - path: /test
        backend:
          serviceName: iot-gateway-svc
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: iot-gateway-svc2
          servicePort: 80
